--- a/test_package/build-with-cmake-generator/CMakeLists.txt
+++ b/test_package/build-with-cmake-generator/CMakeLists.txt
@@ -7,4 +7,4 @@ conan_basic_setup()
 add_executable(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/test_package.cpp)
 target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME test_package)
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD REQUIRED 11)
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 11)
